--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
             <nav>
                 <ul>
                     <li><a href="#donation"><i class="fas fa-code"></i>
-                            Skills</a></li>
+                        Donation</a></li>
                     <li><a href="#about"><i class="fas fa-user"></i>
                             About</a></li>
                 </ul>
@@ -26,7 +26,7 @@
                     <p>Your donation helps us continue our mission.</p>
                     <div class="row">
                         <button onclick="window.location.href='#'">Donate now</button>
-                        <img src="./../static/images/personaje weed.svg" alt="">
+                        <img src="./../static/images/personaje weed.svg" alt="Cartoon marijuana plant holding a peace sign.">
                     </div>
                     
                 </article>
