--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                     <p>Your donation helps us continue our mission.</p>
                     <div class="row">
                         <button onclick="window.location.href='#'">Donate now</button>
-                        <img src="./../static/images/personaje weed.svg" alt="Cartoon marijuana plant holding a peace sign.">
+                        <img src="./../static/images/Funny-cannabis-plant-illustration.svg" alt="Cartoon marijuana plant holding a peace sign.">
                     </div>
                     
                 </article>
